--- a/Backup1/Desktop.csproj
+++ b/Backup1/Desktop.csproj
@@ -3,7 +3,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <FileUpgradeFlags>40</FileUpgradeFlags>
-    <UpgradeBackupLocation>C:\Users\Marcus\1dv607\blackjack_csharp-master\1dv607-blackjack\Backup5\</UpgradeBackupLocation>
-    <OldToolsVersion>15.0</OldToolsVersion>
+    <UpgradeBackupLocation>C:\Users\Marcus\1dv607\blackjack_csharp-master\1dv607-blackjack\Backup\</UpgradeBackupLocation>
+    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
 </Project>
